# kagent-claude

./: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
deploy/: Dockerfile  build-and-push.sh
deploy/app/: main.py
deploy/k8s/: deployment.yaml
examples/: Dockerfile  README.md  agent-crd.yaml  agent-hitl.yaml  agent.yaml  basic.py  build-and-push.sh  custom_config.py  deployment.yaml  hitl.py  main.py  requirements.txt
python/: pyproject.toml
