[project]
name = "kagent-claude-workspace"
version = "0.2.0"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/kagent-claude"]

[tool.uv]
constraint-dependencies = [
  "opentelemetry-api>=1.38.0",
  "opentelemetry-sdk>=1.38.0",
]

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["kagent"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["packages/kagent-claude/tests"]
